--- a/css/app.css
+++ b/css/app.css
@@ -253,6 +253,20 @@ body.section-0 #map { opacity:0.5; }
     background-position: -1325px -5px;
 }
 
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+}
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 @media (max-width:640px) {
   p{
     font-size:12px;
