--- a/css/app.css
+++ b/css/app.css
@@ -167,7 +167,7 @@ body.section-0 #map { opacity:0.5; }
     background-color: rgba(220, 103, 164, .8);
 }
 #mural.active{
-    background-color: rgba(245, 219, 194, .8);
+    background-color: rgba(184, 103, 26, 0.8);
 }
 #mcclymonds.active{
     background-color: rgba(250, 212, 73, .8);
