--- a/css/app.css
+++ b/css/app.css
@@ -7,7 +7,7 @@ h1{
 	font-family: 'Pacifico', cursive;
 }
 
-h2, h3, p{
+h2, h3, h4{
 	font-family: 'Montserrat', sans-serif;
 }
 
@@ -64,6 +64,11 @@ h2, h3, p{
     color: white;
 }
 
+.round{
+    border-radius: 50px;
+    width: 100px;
+}
+
 #narrative{
     /*	height: 100%;*/
     width: 33.3333%;
@@ -88,7 +93,7 @@ h2, h3, p{
 
 #cover{
     text-align: center;
-    padding: 10px;
+    padding: 20px;
 }
 
 #cover img{
@@ -112,7 +117,6 @@ h2, h3, p{
     font-size: 30px;
 }
 
-
 section{
     padding: 30px;
     text-align: center;
@@ -124,6 +128,8 @@ section{
     text-shadow: rgba(64,64,64,1) 0px 0px 10px;
 }
 section audio{
+    width: 100%;
+    height: 40px;
     opacity: .1;
     transition:opacity 500ms;
     -moz-transition:opacity 500ms;
@@ -159,7 +165,7 @@ section a{
 }
 
 section.active a{
-    color: white;
+    color: #514f4f;
     text-shadow: rgba(64,64,64,0) 0px 0px 4px;
 }
 .feature-img{
@@ -175,13 +181,10 @@ section.active .feature-img{
 }
 
 section.active{
-    color: white;
+    color: black;
     text-shadow: rgba(64,64,64,0) 0px 0px 4px;
 }
 
-section:last-child{
-    margin-bottom: 500px;
-}
 
 /* Distinguish the "cover page" visually other sections. */
 body.section-0 #map { opacity:0.5; }
@@ -263,7 +266,6 @@ body.section-0 #map { opacity:0.5; }
 
 .sprite-bart.active {
     background-position: -5px -5px;
-
 }
 
 .sprite-crane {
