--- a/css/app.css
+++ b/css/app.css
@@ -48,6 +48,12 @@ a:hover{
 #modal-trigger:hover{
     background-color: rgba(88, 88, 88, .8);
 }
+#myModal{
+    top: 0;
+    height: 100%;
+    background-color: rgb(166, 198, 203);
+    overflow: scroll;
+}
 
 #plus{
     font-size: 50px;
@@ -188,6 +194,10 @@ a:hover{
 #cover h2{
     color: white;
     font-size: 30px;
+}
+
+#cover p{
+    font-size: 20px;
 }
 
 section{
@@ -457,6 +467,20 @@ body.section-0 #map { opacity:0.5; }
     height: 100%;
 }
 
+.formWrapper{
+    position: relative;
+    padding-top: 25px;
+    height: 100%;
+}
+
+.formWrapper iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 @media (max-width:640px) {
     body{
         height: 100%;
@@ -466,6 +490,25 @@ body.section-0 #map { opacity:0.5; }
     p{
         font-size:12px;
         line-height:16px;
+    }
+    #modal-trigger{
+        top: 80%!important;
+        height: 50px;
+        width: 50px;
+        line-height: 50px;
+        border-radius: 150px;
+        background-color: rgba(88, 88, 88, .8);
+
+    }
+    #plus{
+        font-size: 30px;
+        color: rgb(165, 192, 196);
+    }
+    .hidden{
+        margin-top: 5px;
+        font-size: 10px;
+        font-weight: bold;
+        opacity: 1;
     }
     #cover img{
         height: 35px;
