--- a/css/app.css
+++ b/css/app.css
@@ -561,6 +561,7 @@ body.section-0 #map { opacity:0.5; }
     #myModal{
         top:0;
         overflow: scroll;
+        height: 600px;
     }
 }
 
