--- a/css/app.css
+++ b/css/app.css
@@ -188,7 +188,7 @@ a:hover {
     /* padding-bottom: 33.3333%;*/
   top: 0;
   right: 0;
-  bottom: 0px;
+  bottom: 0;
   left: 0;
   overflow: scroll;
   -webkit-overflow-scrolling: touch;
