--- a/css/app.css
+++ b/css/app.css
@@ -10,6 +10,15 @@ h2, h3, h4 {
   font-family: 'Montserrat', sans-serif;
 }
 
+h1, h2{
+  text-shadow: 2px 2px 3px rgba(0,0,0,0.3);
+}
+
+
+.move-left{
+  transform:translate(-180px, 0);
+}
+
 a {
   color: black;
   transition: color 500ms;
@@ -144,10 +153,36 @@ a:hover {
   font-size: 70px;
 }
 
-.content-b h2, h3 {
+.content-b h2 {
   color: white;
 }
 
+.content-a img{
+  height: 50px;
+  opacity: 0;
+  transition: all 500ms;
+  -moz-transition: all 500ms;
+  -webkit-transition: all 500ms;
+  -o-transition: all 500ms;
+}
+
+.sub{
+  color: white;
+  margin-left: 100px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.fadeEl{
+  opacity: 0;
+  transition: all 500ms;
+  -moz-transition: all 500ms;
+  -webkit-transition: all 500ms;
+  -o-transition: all 500ms;
+}
+
+.show{
+  opacity: 1!important;
+}
 .round {
   border-radius: 50px;
   width: 100px;
