added brwsr compatibility

--- a/css/app.css
+++ b/css/app.css
@@ -18,7 +18,7 @@ h1, h2{
 .move-left{
   transform:translate(-180px, 0);
   -moz-transition:translate(-180px, 0);
-  -webkit-transition:translate(-180px, 0);
+  -webkit-transition:translate(-180px, 0!important;
   -o-transition:translate(-180px, 0);
 }
 
