--- a/css/app.css
+++ b/css/app.css
@@ -163,6 +163,7 @@ a:hover {
 .content-a img{
   height: 50px;
   opacity: 0;
+  -webkit-transition:translate(0, 0);
   transition: all 500ms;
   -moz-transition: all 500ms;
   -webkit-transition: all 500ms;
