--- a/css/app.css
+++ b/css/app.css
@@ -6,13 +6,25 @@ h1 {
   font-family: 'Pacifico', cursive;
 }
 
-h2, h3, h4 {
+h2, h3, h4, label {
   font-family: 'Montserrat', sans-serif;
 }
 
-h1, h2{
+h1, h2,{
   text-shadow: 2px 2px 3px rgba(0,0,0,0.3);
 }
+
+form h1{
+  color: #585858;
+}
+
+fieldset legend{
+  background: #A6C6CB;
+}
+
+fieldset {
+  border: 1px solid #585858;
+  }
 
 
 a {
@@ -191,6 +203,13 @@ a:hover {
   width: 100px;
 }
 
+.share-bttn{
+  position: absolute;
+  right: 20px;
+  top: 10px;
+  font-size: 26px;
+}
+
 .cust-button {
   background-color: rgba(147, 181, 186, .3)!important;
   font-family: 'Montserrat', sans-serif;
@@ -309,12 +328,12 @@ section.active .videoWrapper {
   opacity: 1;
 }
 
-section h3 {
+section h3, section h4 {
   color: rgba(128,128,128,0);
   text-shadow: rgba(64,64,64,1) 0px 0px 40px;
 }
 
-section.active h3 {
+section.active h3, section.active h4 {
   color: black;
   text-shadow: rgba(64,64,64,0) 0px 0px 4px;
 }
@@ -564,19 +583,6 @@ body.section-0 #map {
   height: 100%;
 }
 
-.formWrapper {
-  position: relative;
-  padding-top: 25px;
-  height: 100%;
-}
-
-.formWrapper iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
 
 @media (max-width:640px) {
   body {
